# sprinkles

./: Cargo.toml  README.md  ROADMAP.md
benches/src/: main.rs
crates/bevy_sprinkles/: Cargo.toml
crates/bevy_sprinkles/src/: compute.rs  extract.rs  lib.rs  material.rs  mesh.rs  prelude.rs  runtime.rs  sort.rs  spawning.rs
crates/bevy_sprinkles/src/asset/: curve.rs  mod.rs  particle_material.rs  serde_helpers.rs
crates/bevy_sprinkles/src/asset/versions/: mod.rs  v0_1.rs
crates/bevy_sprinkles/src/shaders/: common.wgsl  particle_material.wgsl  particle_simulate.wgsl  particle_sort.wgsl
crates/bevy_sprinkles/src/textures/: baked.rs  preset.rs
crates/bevy_sprinkles/tests/: asset_loader.rs
crates/bevy_sprinkles_editor/: Cargo.toml  build.rs
crates/bevy_sprinkles_editor/src/: io.rs  main.rs  plugin.rs  project.rs  state.rs  utils.rs  viewport.rs
crates/bevy_sprinkles_editor/src/assets/examples/: 3d-explosion.ron  README.md  acid-pool.ron  loot.ron  magic-puff.ron  rain.ron  tube-trails.ron  windy-snow.ron
crates/bevy_sprinkles_editor/src/ui/components/: data_panel.rs  examples_dialog.rs  project_selector.rs  seekbar.rs  sidebar.rs
crates/bevy_sprinkles_editor/src/ui/components/binding/: commit.rs  mod.rs  swatch.rs  sync.rs
crates/bevy_sprinkles_editor/src/ui/components/inspector/: collider_properties.rs  colors.rs  draw_pass.rs  mod.rs  particle_flags.rs  project_properties.rs  settings_properties.rs  sub_emitter.rs  trail.rs  turbulence.rs  types.rs  utils.rs  velocities.rs
crates/bevy_sprinkles_editor/src/ui/widgets/: combobox.rs  inspector_field.rs  text_edit.rs  texture_edit.rs  variant_edit.rs
crates/bevy_sprinkles_editor/src/ui/widgets/curve_edit/: materials.rs  mod.rs
