[workspace]
members = ["crates/*", "benches"]
resolver = "3"

[workspace.lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
bevy = { version = "0.18.0", default-features = false, features = [
    "default_app",
    "default_platform",
    "3d_api",
    "3d_bevy_render",
    "ui_api",
    "ui_bevy_render",
    "picking",
    "file_watcher",
    # "reflect_auto_register",
] }
serde = { version = "1", features = ["derive"] }
ron = "0.10"
thiserror = "2"
bytemuck = { version = "1.14", features = ["derive"] }
bitflags = { version = "2", features = ["serde"] }
paste = "1"
