[package]
name = "bevy_sprinkles_editor"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "GPU particle system editor for Bevy"
readme = "../../README.md"
repository = "https://github.com/doceazedo/sprinkles"
keywords = ["bevy", "particle-system", "particles", "vfx"]
categories = ["game-development", "simulation"]

[[bin]]
name = "sprinkles"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
bevy = { workspace = true, features = ["jpeg"] }
bevy_sprinkles = { version = "0.2.0", path = "../bevy_sprinkles" }
serde = { workspace = true }
ron = { workspace = true }
rfd = "0.15"
Inflector = "0.11.4"
bevy_ui_text_input = "0.7"
bevy_easings = "0.18.0"
open = "5.3.3"
